--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -16,7 +16,7 @@ permissions:
 
 jobs:
   container:
-    if: github.repository_owner == 'searxng'
+    if: github.repository_owner == 'steven-cmy'
     name: Container
     runs-on: ubuntu-24.04-arm
     permissions:
