--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -25,7 +25,7 @@ env:
 
 jobs:
   build:
-    if: github.repository_owner == 'searxng' || github.event_name == 'workflow_dispatch'
+    if: github.repository_owner == 'steven-cmy' || github.event_name == 'workflow_dispatch'
     name: Build (${{ matrix.arch }})
     runs-on: ${{ matrix.os }}
     strategy:
@@ -163,7 +163,7 @@ jobs:
         run: make container.test
 
   release:
-    if: github.repository_owner == 'searxng' && github.ref_name == 'master'
+    if: github.repository_owner == 'steven-cmy' && github.ref_name == 'master'
     name: Release
     runs-on: ubuntu-24.04-arm
     needs:
